--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "name": "jzawadzki/metar-php",
     "licence": "MIT",
+    "description": "lightweight library to decode METAR messages",
     "authors": [
         {
             "name": "Jerzy Zawadzki",
-            "email": "zawadzki.jerzy@gmail.com"
+            "email": "zawadzki.jerzy@gmail.com",
+            "homepage": "http://github.com/jzawadzki"
         }
     ],
     "autoload": {
